<resources>
    <string name="app_name">Arizona Town Hall</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Arizona Town Hall</string>
    <string name="nav_header_subtitle">https://aztownhall.org/</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="default_notification_channel_id" translatable="true">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Topic</string>
    <string name="message_subscribed">Subscribed!</string>
    <string name="message_subscribe_failed">Subscription failed…</string>
    <string name="facebook_app_id">778004509638561</string>
    <string name="fb_login_protocol_scheme">fb778004509638561</string>
    <string name="menu_home">Home</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="image_content_description">image</string>
    <string name="login_text">LOGIN</string>
    <string name="signup_text">SIGNUP</string>
    <string name="email_hint">Email:</string>
    <string name="password_hint">Password:</string>
    <string name="remember_me_text">Remember me?</string>
    <string name="phone_number_hint">Phone number:</string>
    <string name="sign_up_and_make_a_difference_text">Sign up and make a difference!</string>
    <string name="mailling_address_text">Mailing address:</string>
    <string name="logout_text">LOGOUT</string>
    <string name="sign_in_text">SIGN-IN</string>
    <string name="social_menu_text">Social</string>
    <string name="registration_donation_menu_text">Membership/Donation</string>
    <string name="login_description_text">If you do not already have an account click sign-in and you will be prompted to create one!</string>
    <string name="share_to_facebook_text">Share to facebook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score_leader_text">Score:</string>
    <string name="wa_account_admin">59091</string>
    <string name="oauth_host">oauth.wildapricot.org</string>
    <string name="oauth_url">https://oauth.wildapricot.org</string>
    <string name="oauth_post_endpoint">/auth/token</string>
    <string name="callbackUrl">aztownhall://callback</string>
    <string name="text_small_description">Selection for small sized text</string>
    <string name="small_size_text">Small</string>
    <string name="medium_size_text">Medium</string>
    <string name="large_size_text">Large</string>
    <string name="font_test_text">Font</string>
    <string name="i_will_text">I Will</string>
    <string name="share_btn_text">Share</string>
    <string name="current_leaders_txt">Current Leaders</string>
    <string name="i_will_photo_btn_text">I will photo</string>
    <string name="i_will_info_text">I will statements represent individual commitments to action. Posting an I will statement of your own to a social media platform is a great way to show the people you know and care for what you are committed to, and it helps to raise awareness of Town Hall. Please enter your own personal I will statement below, then:\n 1. Click the photo button to take a photo, choose one from your image gallery, or choose a generic background.\n 2. Add I will text and/or stickers to the image, then save the image.\n 3. You will then be redirected back here, where you can click the share button below your image. This will share your image along with your I will statement to social media!</string>
    <string name="i_will_hint_text">I Will:</string>
    <string name="your_points_text">Your Points:</string>
    <string name="i_will_uploads_text">I Will Uploads</string>
    <string name="swipe_right_left_to_browse_text">(Swipe right/left to browse)</string>
    <string name="i_will_image_content_desc">I will image</string>
    <string name="picture_to_edit">Picture to edit</string>
    <string name="text_size_selector">Text Size Selector</string>
    <string name="text_color_selector">Text Color Selector</string>
    <string name="select_font">Select Font</string>
    <string name="rotate_image">Rotate image</string>
    <string name="save">Save</string>
    <string name="links_title">Links</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="community_town_hall_frequently_asked_questions">Community town hall frequently asked questions</string>
    <string name="need_help_figuring_out_how_to_zoom">Need help figuring out how to Zoom?</string>
    <string name="events_calender">Events Calender</string>
    <string name="i_will_user_photo_content_description">I will user photo</string>
    <string name="user_options_text">User Options</string>
    <string name="news_title_text">News</string>
    <string name="upcoming_events_text">Upcoming Events</string>
    <string name="arizona_town_hall_is_a_nonprofit_organization_that_brings_diverse_people_together_to_solve_critical_and_often_divisive_policy_issues">Arizona Town Hall is a nonprofit organization that brings diverse people together to solve critical and often divisive policy issues</string>
    <string name="click_a_news_item_to_view_content_hold_down_to_share_to_facebook_or_twitter">(Click a news item to view content. Hold down to share to Facebook or Twitter!)</string>
    <string name="click_on_event_to_view_details_hold_down_to_share_to_facebook_or_twitter">(Click on event to view details. Hold down to share to Facebook or Twitter!)</string>
    <string name="double_click_input_text">I Will</string>
    <string name="large_text">Large</string>
    <string name="medium_text">Medium</string>
    <string name="small_text">Small</string>
    <string name="swipe_left_right">Swipe left/right\nclick to choose</string>
    <string name="directional_arrows">Directional arrows</string>
    <string name="make_a_donation">Make A Donation!</string>
    <string name="not_a_member_nclick_below_to_sign_up">Not a member?\nClick below to sign up!</string>
    <string name="become_a_member">Become A Member!</string>
    <string name="town_hall_logo">town hall logo</string>
    <string name="make_a_donation_n_make_a_difference">Make A Donation.\n Make A Difference.</string>
    <string name="author_source">Author/Source</string>
</resources>