<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_sticker_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#020202"
    android:fitsSystemWindows="true"
    tools:context=".ui.social2.StickerFragment">

    <FrameLayout
        android:id="@+id/fl_drawing_view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00FFFFFF"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toTopOf="@+id/ib_sticker"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_picture_for_sticker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="false"
            android:background="#00FFFFFF"
            android:contentDescription="@string/picture_to_edit"
            android:fitsSystemWindows="true"
            android:scaleType="fitCenter" />

        <com.mattg.arizonatownhall.ui.social2.DrawingView
            android:id="@+id/drawable_canvas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF" />

    </FrameLayout>

    <ImageButton
        android:id="@+id/ib_save_picture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#000000"
        android:contentDescription="@string/save"
        android:src="@drawable/ic_baseline_save_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/ib_rotate"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/rotate_image"
        android:src="@drawable/ic_baseline_rotate_left_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ib_sticker" />

    <ImageButton
        android:id="@+id/ib_sticker"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="4dp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_add_box_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/ib_text"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:background="#00FFFFFF"
        android:src="@drawable/ic_baseline_text_fields_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ib_rotate"
        app:layout_constraintStart_toEndOf="@+id/ib_save_picture" />

</androidx.constraintlayout.widget.ConstraintLayout>